tdf#102928 PDF export: do recompress CMYK images

The export filter writes /DeviceRGB unconditionally, so for now don't
optimize CMYK image handling here. Though the added GraphicDescriptor
API allows supporting this natively in the export filter in the future.

Change-Id: I76b44b910948467aeb1f15e5ae765201d183c99d
Reviewed-on: https://gerrit.libreoffice.org/55343
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>